<resources>
    <string name="app_name">Notice Board App</string>
    <string name="all_notices">All Notices</string>
    <string name="search_notices">Search Notices</string>
    <string name="notice_title">Notice Title</string>
    <string name="notice_subtitle">Notice Subtitle</string>
    <string name="type_notice_here">Type Notice Here</string>
    <string name="create_notice">Create Notice</string>
    <string name="options">Options</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel_dialog">CANCEL</string>
    <string name="notices">Notices</string>
    <string name="delete_notice">Delete Notice</string>
    <string name="delete_notice_uppercase">DELETE NOTICE</string>
</resources>